[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sorting-bboxes"
version = "0.0.1"
authors = [
  { name="Tran Duc Trung", email="trungtd@gmail.com" },
]
description = "Sorting bounding boxes"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/niits/sorting-bboxes"
"Bug Tracker" = "https://github.com/niits/sorting-bboxes/issues"